# LightwaveExplorer

./: .gitignore  CMakeLists.txt  CMakeListsLinux.txt  CMakeListsLinuxCPU.txt  CrystalDatabase.txt  DefaultValues.ini  LICENSE  LWEAciveDeviceCounter.h  LWEActiveDeviceCPU.h  LWEActiveDeviceCUDA.cuh  LWEActiveDeviceCommon.cpp  LWEActiveDeviceSYCL.h  LightwaveExplorer.rc  LightwaveExplorer.sln  LightwaveExplorer.vcxproj  LightwaveExplorer.vcxproj.filters  LightwaveExplorerCore.cu  LightwaveExplorerCore.cuh  LightwaveExplorerCoreCPU.cpp  LightwaveExplorerCoreCPU.h  LightwaveExplorerCoreCounter.cpp  LightwaveExplorerCoreCounter.h  LightwaveExplorerCoreSYCL.h  LightwaveExplorerFitting.cpp  LightwaveExplorerFitting.h  LightwaveExplorerFrontend.cpp  LightwaveExplorerFrontend.h  LightwaveExplorerMac.cpp  LightwaveExplorerTrilingual.h  LightwaveExplorerUtilities.cpp  LightwaveExplorerUtilities.h  MPQ_Nonlinear_Propagation.cpp  MPQ_Nonlinear_Propagation.h  MPQ_Nonlinear_Propagation.rc  MPQ_Nonlinear_Propagation.sln  MPQ_Nonlinear_Propagation.vcxproj  MPQ_Nonlinear_Propagation.vcxproj.filters  NonlinearPropCUDA.cu  NonlinearPropCUDA.cuh  README.md  (+20 more)
.github/workflows/: linux-build.yml  mac-build.yml  python-upload.yml  windows-build.yml
AppImage/: AppImageBuilder.yml  macplistbase.plist  makeAppImage.sh  makeAppImage2.sh  makeMacApp.sh
AppImageCPU/: AppImageBuilder.yml  makeAppImageCPU.sh
BuildResources/: CMakeListsLinux.txt  CMakeListsLinuxCPU.txt  CMakeListsMac.txt  DesktopFileFlatpak  DesktopFileLauncher  DesktopFileNoLauncher  buildFlatpak.sh  buildGPLFlatpak.sh  buildLinux.sh  buildLinuxCPU.sh  compileCommandLineLWEfromRepos.sh  compileMacFromRepos.sh  flatpakLauncher.sh  flatpakManifest.json  flatpakManifestCUDA.json  flatpakManifestCUDAplusIntel.json  flatpakManifestOneAPI.json  io.NickKarpowicz.LightwaveExplorer.yml  io.NickKarpowicz.LightwaveExplorerGPL.yml  io.github.NickKarpowicz.LightwaveExplorer.metainfo.xml  io.github.NickKarpowicz.LightwaveExplorer.yml  io.github.NickKarpowicz.LightwaveExplorerGPL.yml  makeLaunchScript.sh  makeLinuxIcons.sh  makeMacApp.sh  makeMacAppVcpkg.sh
BuildResources/AppImage/: AppImageBuilder2.yml  AppRun.env  makeAppImage.sh  traceFileOutput.txt
BuildResources/Archival/: LightwaveExplorerMacCommandLine.cpp  buildLinux.sh  io.github.NickKarpowicz.LightwaveExplorer.yml  makeLinuxIcons.sh
BuildResources/LWElauncher/: LWElauncher.cpp  LWElauncher.vcxproj.filters  LightwaveExplorerLauncher.sh
DlibLibraryComponents/: DlibLibraryComponents.cpp  DlibLibraryComponents.vcxproj  DlibLibraryComponents.vcxproj.filters
Documentation/: FDTD_grid_example.ipynb  LightwaveExplorer.py  LightwaveExplorerDocumentation.html  LightwaveExplorerDocumentation.ipynb  LightwaveExplorerDocumentation.py  New_Crystal_Worksheet.ipynb  New_Crystal_Worksheet.py  README.md  changelog.md
Documentation/Images/: LabelScreenshot.xcf
LWElauncher/: LWElauncher.cpp  LWElauncher.rc  LWElauncher.vcxproj
LightwaveExplorerDevices/: LWEAciveDeviceCounter.h  LWEActiveDeviceBase.h  LWEActiveDeviceCPU.h  LWEActiveDeviceCUDA.cuh  LWEActiveDeviceCommon.cpp  LWEActiveDeviceSYCL.h  LightwaveExplorerCommandLineMain.cpp  LightwaveExplorerCoreCPU.cpp  LightwaveExplorerCoreCPU.h  LightwaveExplorerCoreCPUFP32.cpp  LightwaveExplorerCoreCPUFP32.h  LightwaveExplorerCoreCounter.cpp  LightwaveExplorerCoreCounter.h  LightwaveExplorerCoreFP32.cu  LightwaveExplorerCoreFP32.cuh  LightwaveExplorerHelpers.h  LightwaveExplorerSYCL.cpp  LightwaveExplorerSYCL.h  LightwaveExplorerSYCL.vcxproj  LightwaveExplorerSYCL.vcxproj.filters  LightwaveExplorerSYCLFP32.cpp  LightwaveExplorerTrilingual.h  LightwaveExplorerUtilities.cpp  LightwaveExplorerUtilities.h  LighwaveExplorerCommandLineMain.cpp
LightwaveExplorerGTK/: LIghtwaveExplorerGraphicalClasses.h  LightwaveExplorerDPCPPlib.cpp  LightwaveExplorerDPCPPlib.h  LightwaveExplorerDPCPPlibFP32.cpp  LightwaveExplorerDPCPPlibFP32.h  LightwaveExplorerFrontendGTK.cpp  LightwaveExplorerFrontendGTK.h  LightwaveExplorerGTK.rc  LightwaveExplorerGTK.vcxproj  LightwaveExplorerGTK.vcxproj.filters  LightwaveExplorerGraphicalClasses.h  RCa09060  makeAppImage.sh  makefile  resource.h
LightwaveExplorerSYCL/: LightwaveExplorerSYCL.cpp  LightwaveExplorerSYCL.h  LightwaveExplorerSYCL.vcxproj  LightwaveExplorerSYCL.vcxproj.filters  pch.cpp  pch.h
Source/: DataStructures.hpp  DeviceFunctions.hpp  Kernels.hpp  LightwaveExplorer.sln  LightwaveExplorerCommandLineMain.cpp  LightwaveExplorerCommandLineMain.cu  LightwaveExplorerCore.cu  LightwaveExplorerCore.cuh  LightwaveExplorerHelpers.h  LightwaveExplorerInterfaceClasses.cpp  LightwaveExplorerInterfaceClasses.hpp  LightwaveExplorerTrilingual.h  LightwaveExplorerUtilities.cpp  LightwaveExplorerUtilities.h  MaxwellConfiguration.hpp  MaxwellDeviceFunctions.hpp
Source/BuildResources/: AppIcon.icns  DefaultValues.ini  DesktopFileFlatpak  DesktopFileLauncher  DesktopFileNoLauncher  Licenses.txt  WinBuild.ps1  compileCommandLineLWEfromRepos.sh  flatpakLauncher.sh  flatpakManifest.json  flatpakManifestAll.json  flatpakManifestCUDA.json  flatpakManifestCUDAplusIntel.json  flatpakManifestIntel.json  io.github.NickKarpowicz.LightwaveExplorer.metainfo.xml  macAutoBuild.sh  macAutoBuildIntel.sh  makeLaunchScript.sh  makeMacAppQt.sh  makeMacAppQtBundle.sh  makeMacAppVcpkg.sh  test_input.txt
Source/Devices/: DlibLibraryComponents.cpp  LWEAciveDeviceCounter.h  LWEActiveDeviceCPU.h  LWEActiveDeviceCPU_pfft.h  LWEActiveDeviceCUDA.cuh  LWEActiveDeviceSYCL.h  LightwaveExplorerCoreCPU.cpp  LightwaveExplorerCoreCPU.h  LightwaveExplorerCoreCPUFP32.h  LightwaveExplorerCoreCounter.cpp  LightwaveExplorerCoreCounter.h  LightwaveExplorerCoreFP32.cuh  LightwaveExplorerSYCL.cpp  LightwaveExplorerSYCL.vcxproj  LightwaveExplorerSYCL.vcxproj.filters  LightwaveExplorerSYCLFP32.cpp  LightwaveExplorerSYCLLinux.cpp  LightwaveExplorerSYCLLinux.h  LightwaveExplorerSYCLLinuxFP32.cpp  LightwaveExplorerSYCLLinuxFP32.h
Source/Frontend/: resource.h  (+14 more)
Source/Python/: README.md  pyproject.toml
Source/Python/src/LightwaveExplorer/: LightwaveExplorer.py  __init__.py
(+59 files in other folders)
